--- a/seleksi_ppm_wiladhianty_yulianova/index.html
+++ b/seleksi_ppm_wiladhianty_yulianova/index.html
@@ -283,7 +283,7 @@
 
     <div class="row">    
         <div class="container-fluid">
-        <div class="card">
+        <div class="card text-center">
             <div class="card-header">
                 Featured
             </div>
